[project]
dependencies = []
description = "Postgres DBA stuff"
name = "postgres-dba"
requires-python = "~=3.13, <4"
version = "0.1.0"

[dependency-groups]
dev = [
    "psycopg[binary]>=3.2.9,<4",
    "pydantic>=2.11.7,<3.0",
    "ruff>=0.12.4,<1",
    "typer>=0.16.0,<1.0",
]

[project.scripts]
dba = "postgres_dba.dba:app"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["postgres_dba"]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = []
select = ["E", "F", "I"]
